--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "devDependencies": {
     "onchange": "^2.2.0",
-    "tslint": "^3.7.0",
-    "tslint-config-typings": "^0.2.0",
-    "typescript": "^1.8.9",
-    "typings": "^0.7.11"
+    "tslint": "^4.0.0-dev.3",
+    "tslint-config-typings": "^0.3.1",
+    "typescript": "^2.0.10",
+    "typings": "^2.0.0"
   }
 }
