Update prettier to 1.5.2

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "repository": "mafredri/phoenix-typings",
   "typings": "index.d.ts",
   "scripts": {
-    "format": "prettier --write --single-quote --trailing-comma es5 *.ts"
+    "format": "prettier --write --no-bracket-spacing --single-quote --trailing-comma es5 *.ts"
   },
   "devDependencies": {
     "onchange": "^3.2.1",
-    "prettier": "^1.4.4",
+    "prettier": "^1.5.2",
     "tslint": "^5.1.0",
     "tslint-config-typings": "^0.3.1",
     "typescript": "^2.2.2",
