--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "out",
-    "lib": [
-      "es2015"
-    ]
+    "lib": ["es2015"]
   },
-  "files": [
-    "index.d.ts"
-  ]
+  "files": ["index.d.ts"]
 }
