--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "prettier": "^2.2.1",
     "tslint": "^5.20.1",
     "tslint-config-typings": "^0.3.1",
-    "typescript": "^4.2.4",
-    "typings": "^2.1.1"
+    "typescript": "^4.2.4"
   },
   "typeScriptVersion": "2.0",
   "prettier": {
